Completion notification for long commands hangs gnome-shell
When runinng long command, after completion there is notification shown for command that has completed.
That notification hangs gnome shell for around a minute. Although possibly an issue on gnome-shell (or any other notifcation receiver) it may be worth to limit the length of a command that's beeing sent?
In my scenario it's around 80 000 characters in the command (which is beeing expanded like some-command $(cat arguments.txt)
)