tab: truncate long notifications

At some point shell stalls when receiving a long notification body,
whilst this should probably be fixed in shell we can reuse the code we
already wrote for the close dialogue to simply truncate the message.

Fix: https://gitlab.gnome.org/GNOME/console/-/issues/343